--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -25,11 +26,10 @@
                     <a class="navbar-brand" href="index.html"><span class="fw-bolder text-primary"><img  width="100" height="100"  src="assets/theo-rectangle-white.png" alt=""></span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
-                            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                            <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-                            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <ul class="text-center con-font navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
+                            <li class="px-4 nav-item"><a class="nav-link" href="index.html">My Skills</a></li>
+                            <li class="px-4 nav-item"><a class="nav-link" href="resume.html">Projects</a></li>
+                            <li class="px-4 nav-item"><a class="nav-link" href="projects.html">About Me</a></li>
                         </ul>
                     </div>
                 </div>
