--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Personal - Start Bootstrap Theme</title>
+        <meta http-equiv="refresh" content="0; URL=https:/bigboss.com/theo-smheo">
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Custom Google font-->
