--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <main class="flex-shrink-0">
         
             <!-- Navigation-->
-            <!-- <nav class="navbar navbar-expand-lg navbar-light py-3">
+            <nav class="navbar navbar-expand-lg navbar-light py-3">
                 <div class="container px-5">
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav-bg text-center jockey-one-regular navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                             <li class="px-2 py-2 nav-item"><a class="nav-link nav-active" href="index.html">My Skills</a></li>
                             <li class="px-2 py-2 nav-item"><a class="nav-link" href="resume.html">Projects</a></li>
-                            <li class="px-2 py-2 nav-item"><a class="nav-link" href="projects.html">About Me</a></li>
+                            <li class="px-2 py-2 nav-item"><a class="nav-link" href="./index-v2.html">Other Shit</a></li>
                         </ul>
                     </div>
                 </div>
-            </nav> -->
+            </nav>
 
         <!-- Hero Banner -->
         <div class="container my-5">
