Redesign navigation with offcanvas and new styles
Replaces the previous navigation bar with a modern offcanvas menu, updates navigation links and branding, and adds a CV download button. Introduces new styles for navigation, offcanvas, and buttons to improve UI consistency and visual appeal.

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <script src="js/common.js"></script>
     </head>
     <style>
+        * {
+    font-family: 'Rajdhani', sans-serif;
+}
     body{
     
         background: radial-gradient(50% 50% at 50% 50%, #9C72EF 0%, #F4F1FA 100%)!important;
