Revamp Cafe Royal project UI and assets
Replaced outdated Cafe Royal screenshots with new design iteration images and updated the project-cafe-royal.html carousel to reflect these changes. Added animated gradient background and pause/play functionality via gradient.js, with supporting CSS updates. Improved visual styles for navigation and project cards, and fixed image path and button data in project-card-data.json and university-website.html.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         <main class="flex-shrink-0">
             <!-- Navigation-->
             <div id="navigation-placeholder"></div>
-
+            <!-- <button class="pause-btn" id="pauseBtn">⏸️ Pause</button> -->
+<div class="bg__gradient"></div>
 <div class="container bg-container">
             <!--  Hero Section -->
             <section class="py-hero" id="index-hero">
@@ -176,6 +177,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="js/gradient.js"></script>
         
         <!-- Initialize Navigation, Skills and Footer -->
         <script>
