--- a/university-website.html
+++ b/university-website.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="slide-in-right">
-                        <img src="/assets/White-Logo.png" alt="University Website Preview" class="img-fluid project-image">
+                        <img src="./assets/White-Logo.png" alt="University Website Preview" class="img-fluid project-image">
                     </div>
                 </div>
             </div>
