--- a/university-website.html
+++ b/university-website.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
@@ -191,6 +192,21 @@
                                     </ul>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Under Construction Notice -->
+        <section class="py-5 fade-in">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <div class="text-bg-tt-card">
+                            <i class="ph ph-warning-circle mb-3" style="font-size: 48px; color: #9D4EDD;"></i>
+                            <h1 class="display-1 mb-4"><strong>Under Construction</strong></h1>
+                            <p class="lead mb-0">More project details, screenshots, and technical insights coming soon. Check back for updates!</p>
                         </div>
                     </div>
                 </div>
